<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wallpapers">

    <fragment
        android:id="@+id/navigation_wallpapers"
        android:name="panthi.tech.app.phone.wallpaper.app.phonewallpapers.WallpapersFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_wallpapers" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="panthi.tech.app.phone.wallpaper.app.phonewallpapers.CategoriesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="panthi.tech.app.phone.wallpaper.app.phonewallpapers.FavoriteFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favorites" />
</navigation>