<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_shape"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="4sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_medium"
            android:letterSpacing="0.0125"
            android:maxLines="1"
            android:text="Info"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="4sp">

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:firstBaselineToTopHeight="12sp"
            android:fontFamily="@font/manrope_medium"
            android:lastBaselineToBottomHeight="4sp"
            android:letterSpacing="0.0071"
            android:lineHeight="24sp"
            android:maxLines="2"
            android:text="Name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_names"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:firstBaselineToTopHeight="12sp"
            android:fontFamily="@font/manrope_medium"
            android:lastBaselineToBottomHeight="4sp"
            android:letterSpacing="0.0179"
            android:lineHeight="20sp"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="4sp">

        <TextView
            android:id="@+id/detail_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:firstBaselineToTopHeight="12sp"
            android:fontFamily="@font/manrope_medium"
            android:lastBaselineToBottomHeight="4sp"
            android:letterSpacing="0.0071"
            android:lineHeight="24sp"
            android:maxLines="2"
            android:text="Author"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_authors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:firstBaselineToTopHeight="12sp"
            android:fontFamily="@font/manrope_medium"
            android:lastBaselineToBottomHeight="4sp"
            android:letterSpacing="0.0179"
            android:lineHeight="20sp"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="4sp">

        <TextView
            android:id="@+id/detail_resolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:firstBaselineToTopHeight="12sp"
            android:fontFamily="@font/manrope_medium"
            android:lastBaselineToBottomHeight="4sp"
            android:letterSpacing="0.0071"
            android:lineHeight="24sp"
            android:maxLines="2"
            android:text="Resolution"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_resolutions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:firstBaselineToTopHeight="12sp"
            android:fontFamily="@font/manrope_medium"
            android:lastBaselineToBottomHeight="4sp"
            android:letterSpacing="0.0179"
            android:lineHeight="20sp"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:background="@color/dividers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="4sp">

        <TextView
            android:id="@+id/section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_medium"
            android:letterSpacing="0.0125"
            android:maxLines="1"
            android:text="@string/palette"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/section_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:firstBaselineToTopHeight="12sp"
            android:fontFamily="@font/manrope_medium"
            android:lastBaselineToBottomHeight="4sp"
            android:letterSpacing="0.045"
            android:lineHeight="16sp"
            android:maxLines="1"
            android:text="@string/tap_to_copy"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/vibrantDarkView"
                    style="@style/textStyle"
                    android:text="@string/vibrant_dark" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/mutedDarkView"
                    style="@style/textStyle"
                    android:text="@string/muted_dark" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/vibrantView"
                    style="@style/textStyle"
                    android:text="@string/vibrant" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/vibrantLightView"
                    style="@style/textStyle"
                    android:text="@string/vibrant_light" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/mutedLightView"
                    style="@style/textStyle"
                    android:text="@string/muted_light" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/mutedView"
                    style="@style/textStyle"
                    android:text="@string/muted" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>